<resources>
    <string name="app_name">Bonpari</string>
    <string name="player_name">%s</string>
    <string name="player_country">%s</string>
    <string name="player_age">%d ans</string>
    <string name="more_button">Regarder le match</string>
    <string name="match_starting_at">Tournoi %s - %s - Terrain %d</string>
    <string name="match_duration">Durée du match: %s</string>
    <string name="tournois">Choisis ton match</string>
    <string name="at_service">Au service</string>
    <string name="not_at_service">Au retour</string>
    <string name="has_win">A gagné</string>
    <string name="pipe2">|</string>
    <string name="pipe1">|</string>
    <string name="parier_joueur_1">Parier\nJoueur 1</string>
    <string name="parier_joueur_2">Parier\nJoueur 2</string>
    <string name="refresh">Rafraîchir</string>
    <string name="vs">VS</string>
    <string name="summary">Résumé</string>
    <string name="channel_name">bonpari_channel</string>
    <string name="channel_description">bonpari_score_updated</string>
    <string name="how_much_to_bet">Combien voulez vous parier sur %s</string>
    <string name="cancel_bet_popup">Annuler</string>
    <string name="parier">Parier</string>
    <string name="contestation_notification_title">Contestation</string>
    <string name="point_scored_notification_title">Point marqué</string>
    <string name="set_changed_notification_title">Changement de set</string>
    <string name="point_scored_by">Un point a été marqué par %s</string>
    <string name="contestation_by">Contestation de %s %s</string>
    <string name="setChanged">Changement de manche</string>
    <string name="contestation_accepted">acceptée</string>
    <string name="contestation_refused">refusée</string>
    <string name="events">Evénements</string>
    <string name="your_bets">Vos paris: %s - %s</string>
    <string name="you_won">Vous avez gagné %s</string>
    <string name="you_lost">Vous avez perdu %s</string>
    <string name="betting_closed">Le match est en cours, les paris sont fermés.</string>
    <string name="match_ended">Le match est terminé.</string>
    <string name="contestation">%s contestations restantes</string>
    <string name="no_connection">Connection avec le serveur impossible</string>
    <string name="unknown_error">Erreur inconnue: %s</string>
    <string name="bet_invalid">Montant invalide</string>
</resources>