<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="8dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginRight="20dp"
        android:background="#111"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingTop="0dp"
        android:paddingRight="20dp"
        android:paddingBottom="10dp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player1"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry"
                tools:text="Elina Svitolina" />

            <TextView
                android:id="@+id/service1"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:layout_marginTop="4dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="25sp"
                tools:text="°" />

            <TextView
                android:id="@+id/player1set1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="6" />

            <TextView
                android:id="@+id/player1set2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="3" />

            <TextView
                android:id="@+id/player1set3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/pipe1"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player1game"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="15" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/player2"
                android:layout_width="150dp"
                android:layout_height="match_parent"
                android:paddingStart="10dp"
                android:paddingTop="5dp"
                android:paddingBottom="5dp"
                android:textColor="#FFFFFF"
                android:textSize="14sp"
                tools:text="Victoria Azarenka"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/service2"
                android:layout_width="20dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text=""
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="25sp"
                tools:text="°" />

            <TextView
                android:id="@+id/player2set1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="40dp"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="2" />

            <TextView
                android:id="@+id/player2set2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="5" />

            <TextView
                android:id="@+id/player2set3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:text="@string/pipe2"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/player2game"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:textAlignment="center"
                android:textColor="#ffffff"
                android:textSize="14sp"
                tools:text="40" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonBet1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="20dp"

                android:text="@string/parier_joueur_1" />

            <Button
                android:id="@+id/buttonBet2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="20sp"
                android:text="@string/parier_joueur_2" />


        </LinearLayout>

    </LinearLayout>


    <Button
        android:id="@+id/buttonRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="16dp"
        android:text="@string/refresh" />


</LinearLayout>


